refactor: clean code improvement (Magic Numbers)